syntax = "proto3";

package TeamProto;

message TeamDto {
  int32 id = 1;
  int32 leaderId = 2;
  repeated TeamMemberDto members = 3;
}

message TeamMemberDto {
	int32 id = 1;
	string name = 2;
	int32 level = 3;
	int32 job = 4;
	int32 channel = 5;
	int32 mapId = 6;
}

message GetTeamRequest {
	int32 id = 1;
}

message GetTeamResponse {
	TeamDto model = 1;
}

message CreateTeamRequest {
	int32 leaderId = 1;
}